# representative_bot

./: .pre-commit-config.yaml  README.md  docker-compose.yml  requirements.txt
.github/workflows/: deploy_on_prod.yaml
bot/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
bot/src/: config.py  constants.py  handlers.py  main.py  message.py  voice_to_text.py
