[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["vlad <vladislav.grachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.3"
python-dotenv = "^1.0.0"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
