[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["vlad <vladislav.grachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pydantic = "^1.10.8"
python-telegram-bot = "^20.4"
aiohttp = "^3.8.5"



[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
